--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -6,7 +6,7 @@
   "tabs": {"text": "文本", "design": "设计", "background": "背景"},
   "editor": {"message": "内容", "placeholder": "说点什么？",
     "clear": "清空"},
-  "author": {"label": "作者 / 署名", "placeholder": "如：匿名", "includeDate": "包含日期"},
+  "author": {"label": "作者 / 署名", "placeholder": "如：匿名", "includeDate": "包含日期", "dateStyle": "日期样式", "dateStyle_iso": "YYYY-MM-DD", "dateStyle_mdy": "MM/DD/YYYY", "dateStyle_dmy": "DD/MM/YYYY", "dateStyle_cn": "YYYY年MM月DD日", "dateStyle_cnWeekday": "星期X，YYYY年MM月DD日"},
   "design": {"saved": "已保存配置", "base": "基础主题", "font": "字体",
     "color": "文字颜色", "size": "文字大小", "ratio": "画布比例",
     "ratio_1_1": "1:1", "ratio_3_4": "3:4", "ratio_9_16": "9:16", "ratio_16_9": "16:9"},
