feat(分享功能): 添加微博、小红书和微信朋友圈分享选项
为中文用户添加微博、小红书和微信朋友圈的分享功能，包括对应的图标和复制链接提示
同时保留原有的Twitter、Facebook和LinkedIn分享选项给其他语言用户

--- a/i18n/locales/zh.json
+++ b/i18n/locales/zh.json
@@ -2,7 +2,10 @@
   "brand": {"title": "QuoteCraft", "watermark": "由 QuoteCraft 生成"},
   "nav": {"save": "保存", "share": "分享", "download": "下载",
     "copy": "复制链接", "twitter": "分享到 X/Twitter",
-    "facebook": "分享到 Facebook", "linkedin": "分享到 LinkedIn"},
+    "facebook": "分享到 Facebook", "linkedin": "分享到 LinkedIn",
+    "weibo": "分享到微博", "xiaohongshu": "分享到小红书", "wechat_moments": "分享到朋友圈",
+    "copy_xiaohongshu": "链接已复制，请打开小红书分享",
+    "copy_wechat": "链接已复制，请打开微信分享"},
   "tabs": {"text": "文本", "design": "设计", "background": "背景"},
   "editor": {"message": "内容", "placeholder": "说点什么？",
     "clear": "清空"},
